# CmakeTravisTest

./: .gitignore  .travis.yml  .vimrc  Async History  CMakeLists.txt  CPackConfig.cmake  coverage.sh  main.cpp
docs/: Doxyfile
test/: CMakeLists.txt
test/src/: DefaultTest.cpp
utils/: CMakeLists.txt
utils/include/: SafeQueue.hpp
utils/src/: ConsumerThread.cpp
utils/test/: CMakeLists.txt
